--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">C196_PA</string>
+    <string name="channel_name">myChannelName</string>
+    <string name="channel_description">myChannelDescription</string>
 </resources>
